# odm

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  odm.toml
.github/workflows/: ci.yml
crates/odm-cli/: Cargo.toml
crates/odm-cli/src/: commands.rs  context.rs  json.rs  lib.rs  main.rs  orient.rs  rollup.rs
crates/odm-cli/tests/: cli.rs  crud.rs  extra.rs  index_backed.rs  json.rs  orient.rs  rollup.rs
crates/odm-core/: Cargo.toml
crates/odm-core/src/: check.rs  frontmatter.rs  gates.rs  graph.rs  id.rs  lib.rs  node.rs  node_type.rs  origin.rs  recompose.rs  rollup.rs  satisfaction.rs  status.rs
crates/odm-core/tests/: check.rs  frontmatter.rs  graph.rs  identity.rs  recompose.rs  rollup.rs  satisfaction.rs  status.rs
crates/odm-graph/: Cargo.toml
crates/odm-graph/src/: cycle.rs  lib.rs  order.rs
crates/odm-graph/tests/: cycles.rs  graph.rs  order.rs
crates/odm-index/: Cargo.toml
crates/odm-index/benches/: index_bench.rs
crates/odm-index/src/: adapter.rs  build.rs  hash.rs  lib.rs  maps.rs  record.rs  snapshot.rs  synth.rs  warm.rs
crates/odm-index/tests/: adapter.rs  build.rs  enrich.rs  snapshot.proptest-regressions  snapshot.rs  synth.rs  warm.rs
crates/odm-store/: Cargo.toml
crates/odm-store/src/: atomic.rs  config.rs  error.rs  git.rs  layout.rs  lib.rs  store.rs
crates/odm-store/tests/: edge_cases.rs  store.rs
crates/oxur-odm/: Cargo.toml  README.md
crates/oxur-odm/src/: config.rs  constants.rs  doc.rs  extract.rs  filename.rs  index.rs  index_sync.rs  main.rs  state.rs
crates/oxur-odm/src/commands/: add_dev.rs  debug.rs  index.rs  new.rs  remove.rs  scan.rs  search.rs  sync_location.rs  transition.rs  update_index.rs  validate.rs
crates/oxur-odm/tests/: cli.rs  integration_tests.rs
crates/oxur-odm/tests/common/: mod.rs
docs/design/: index.md
docs/design-v1.0.0/: project-plan.md
docs/design-v1.0.0/arc01-substrate-node-crud/: arc-plan.md
docs/design-v1.0.0/arc01-substrate-node-crud/slice01-workspace-scaffolding/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc01-substrate-node-crud/slice02-identity-core/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc01-substrate-node-crud/slice03-frontmatter-schema/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc01-substrate-node-crud/slice04-store-layer/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc01-substrate-node-crud/slice05-node-crud/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc01-substrate-node-crud/slice06-check-v1/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/: arc-plan.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice01-graph-construction/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice02-cycles-and-tears/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice03-gates-status-evidence/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice04-derived-order-and-satisfaction/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice05-recomposition-integrity/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice05.1-evidence-transition-dates/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice06-check-v2/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v1.0.0/arc02-graph-gates-derived-order/slice07-cli-graph-mutators/: ledger.md  (+4 more)
docs/design-v1.0.0/arc03-rollup-and-orient/: arc-close.md  arc-plan.md
docs/design-v1.0.0/arc04-index-cache/: arc-plan.md  closing-report.md
docs/design-v1.0.0/arc05-reconciliation/: arc-plan.md
docs/design-v1.0.0/arc06-migrate-self-host/: arc-plan.md
docs/design-v1.0.0/arc07-two-clock-telemetry/: arc-plan.md
docs/design-v1.0.0/arc08-forecasting/: arc-plan.md
docs/design/01-draft/: 0013-odm-architecture-design.md  0014-research-odm-index-incremental-indexing-and-caching.md  0015-odm-arc-slice-breakdown.md  0017-interop-projection-out-reference-and-reconcile-in.md  0018-research-forecasting-under-small-bursty-dag-work.md
docs/design/06-final/: 0002-design-docs-cli.md  0009-oxur-design-documentation-cli-extended-features-plan-phases-6-8.md  0010-oxur-design-documentation-cli-phases-9-10-build-plan.md  0011-research-a-markdowngit-native-dependency-ordered-planning-system.md  0012-odm-project-definition-v-major-rebuild.md  0014-research-odm-index-incremental-indexing-and-caching.md  0016-research-swe-project-and-epic-pm-failures-and-practices.md
docs/design/templates/: design-doc-template.md
docs/dev/: 0012-dead-code-analysis.md  0014-table-padding-issues.md  0017-cli-table-cleanup.md  0018-oxd-show-command-refactor-plan.md  0022-cli-consolidation-plan.md  0023-confyg-integration.md  0025-odm-discussion-bootstrap-rebuild-planning.md
docs/dev/odm/: 0013-index-sync-issues.md  0015-table-padding-issues.md  0016-cli-table-cleanup-prep.md  0019-metadata-fields-implementation-guide.md  0020-metadata-fields-implementation-plan.md  0021-oxd-info-cats-tags-commands.md  0024-implementation-plan-odm-add-dev-feature.md
docs/dev/skill/: 0001-pm-post-mortem-pos-loyalty-svc-what-went-wrong-what-to-do-instead.md  0001-project-x-pm-post-mortem.md
legacy/oxur-odm/: Cargo.toml
legacy/oxur-odm/src/: cli.rs  git.rs  main.rs
legacy/oxur-odm/src/commands/: add.rs  add_headers.rs  info.rs  list.rs  mod.rs  rename.rs  replace.rs  show.rs
(+61 files in other folders)
