[package]
name = "odm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line surface for odm: node CRUD over the store"

# A thin binary so the command surface can be driven end-to-end (assert_cmd)
# under `cargo test -p odm-cli`. The *published* binary is `odm`, built by the
# oxur-odm umbrella, which calls the same `odm_cli::run`.
[[bin]]
name = "odm-cli"
path = "src/main.rs"

[dependencies]
odm-core = { path = "../odm-core" }
odm-store = { path = "../odm-store" }
clap.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
chrono.workspace = true
tabled.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
