[package]
name = "odm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line surface for odm: node CRUD over the store"

# Library-only: the published binary is `odm`, built by the oxur-odm umbrella,
# which calls `odm_cli::run`. The command surface is tested in-process via
# `odm_cli::dispatch` (no spawned binary needed).

[dependencies]
odm-core = { path = "../odm-core" }
odm-store = { path = "../odm-store" }
odm-index = { path = "../odm-index" }
clap.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
chrono.workspace = true
tabled.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
