[package]
name = "odm-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure DAG/tree engine over abstract ids for odm"

[dependencies]
petgraph.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
