[package]
name = "odm-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Persisted, derived stat-cache for odm: the index snapshot record + format (Arc 04)"

[lints]
workspace = true

[dependencies]
odm-core = { path = "../odm-core" }
odm-store = { path = "../odm-store" }
serde = { workspace = true }
postcard.workspace = true
sha2.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
ulid.workspace = true
