[package]
name = "oxur-odm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "An odd document manager - CLI tool for managing design documentation"

# This is both a library and a binary
[[bin]]
name = "odm"
path = "src/main.rs"

[lib]
name = "odm"
path = "src/lib.rs"

[dependencies]
confyg.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
walkdir.workspace = true
regex.workspace = true
colored.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
glob.workspace = true
uuid.workspace = true
tabled.workspace = true
oxur-cli.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
proptest.workspace = true
cargo-llvm-cov.workspace = true
serial_test.workspace = true
