[package]
name = "oxur-odm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The odm umbrella crate: publishes the `odm` binary"

[[bin]]
name = "odm"
path = "src/main.rs"

[dependencies]
odm-cli = { path = "../odm-cli" }

[dev-dependencies]
# Binary-level end-to-end tests drive the built `odm` process (arc03/slice01).
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
