[package]
name = "oxur-odm-legacy"
version = "0.3.5"
edition = "2021"
authors = ["Duncan McGreggor <duncan@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxur/odm"
description = "Legacy odm crate, preserved as the harvest source for the v1.0.0 rebuild"
publish = false

# This crate is excluded from the workspace (see root Cargo.toml `exclude`).
# It is the pre-rebuild source of truth, kept for harvesting config/git/markdown
# utilities into the new crates. It is not built by CI and carries its own
# concrete dependency versions because it cannot inherit workspace metadata.

[[bin]]
name = "odm-legacy"
path = "src/main.rs"

[lib]
name = "odm"
path = "src/lib.rs"

[dependencies]
confyg = { version = "0.3" }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
regex = "1.10"
colored = "2.1"
sha2 = "0.10"
unicode-normalization = "0.1"
glob = "0.3"
uuid = { version = "1.10", features = ["v4"] }
tabled = "0.17"
oxur-cli = { version = "0.2.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
proptest = "1.4"
serial_test = "3.2"
